# monorepo

./: .travis.yml  CMakeLists.txt  CMakeSettings.json  CTestConfig.cmake  README.md
_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  monorepo.sln
_build/Testing/: TAG
_build/Testing/20180131-1327/: Build.xml  Configure.xml  Test.xml
_build/Testing/Temporary/: CTestCostData.txt
_build/Win32/Debug/ALL_BUILD/ALL_BUILD.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog
_build/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
_build/Win32/Release/ALL_BUILD/ALL_BUILD.tlog/: custombuild.read.1.tlog  custombuild.write.1.tlog
_build/Win32/Release/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  (+1 more)
_build/bin1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  bin1.sln  bin1.vcxproj  cmake_install.cmake  monorepo_bin1.sln  monorepo_bin1.vcxproj  monorepo_bin1.vcxproj.filters  version.config.h
_build/bin1/Debug/: monorepo_bin1.ilk
_build/bin1/tests/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  test.algo1.vcxproj  test.algo1.vcxproj.filters  test.algo2.vcxproj  test.algo2.vcxproj.filters
_build/bin2/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
_build/bin2/bin21/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  bin21.sln  bin21.vcxproj  bin21.vcxproj.filters  cmake_install.cmake  monorepo_bin21.sln  monorepo_bin21.vcxproj
_build/bin2/bin21/Debug/: monorepo_bin21.ilk
_build/bin2/bin22/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  bin22.sln  bin22.vcxproj  bin22.vcxproj.filters  cmake_install.cmake  monorepo_bin22.sln  monorepo_bin22.vcxproj
_build/bin2/bin22/Debug/: monorepo_bin22.ilk
_build/libs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  soflibs.sln
_build/libs/lib1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  lib1.sln  lib1.vcxproj  lib1.vcxproj.filters
_build/libs/lib1/Debug/: lib1.lib
_build/libs/lib1/Release/: lib1.lib
_build/libs/lib1/tests/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  test.lib1.vcxproj  test.lib1.vcxproj.filters
_build/libs/lib22/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  lib22.sln
bin1/: CMakeLists.txt  README-de.md  main.cpp  version.config.h.in
bin1/cmake/: FindMonorepoLibs.cmake
bin1/lib2/: CMakeLists.txt  lib2.h  main.cpp
bin1/lib2/lib1/: CMakeLists.txt  lib1.h  main.cpp
bin1/tests/: CMakeLists.txt  algo1.cpp  algo2.cpp
bin2/: CMakeLists.txt
bin2/bin21/: CMakeLists.txt  main.cpp
bin2/bin22/: CMakeLists.txt  main.cpp
cmake/: FindVcpkg.cmake
libs/: CMakeLists.txt
libs/core/: platform_config.h
libs/lib1/: CMakeLists.txt
libs/lib1/tests/: CMakeLists.txt  lib1.cpp
libs/lib22/: CMakeLists.txt
(+102 files in other folders)
